[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Clock.gd" type="Script" id=1]
[ext_resource path="res://DS-DIGI.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Clock.png" type="Texture" id=3]
[ext_resource path="res://Sounds/woah.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Clock.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Thunder.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Whispers.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="Clock" type="Node2D"]
position = Vector2( 50.0254, 52.857 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 60.4726, 22.2388 )
scale = Vector2( 1, 0.868461 )
texture = ExtResource( 3 )
hframes = 2

[node name="ClockText" type="RichTextLabel" parent="."]
margin_left = -0.229584
margin_top = 1.824
margin_right = 641.77
margin_bottom = 43.824
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.384314, 0.905882, 0.0901961, 1 )
text = "11:59:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockTimer" type="Timer" parent="."]
autostart = true

[node name="TickTockTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="TickTock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Thunder" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Whispers" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
[connection signal="timeout" from="ClockTimer" to="." method="_on_ClockTimer_timeout"]
[connection signal="timeout" from="TickTockTimer" to="." method="_on_TickTockTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
